fixed section spacing

--- a/website/styles/style.css
+++ b/website/styles/style.css
@@ -10283,33 +10283,32 @@ body {
 
 .about-section {
   padding-top: 10rem;
-  background: linear-gradient(to bottom, #000000 0%, rgba(0, 0, 0, 0.9) 75%, rgba(0, 0, 0, 0.8) 100%);
 }
 .about-section p {
   margin-bottom: 5rem;
 }
 
-.projects-section {
+.feat-section {
   padding: 10rem 0;
 }
-.projects-section .featured-text {
+.feat-section .featured-text {
   padding: 2rem;
 }
 @media (min-width: 992px) {
-  .projects-section .featured-text {
+  .feat-section .featured-text {
     padding: 0 0 0 2rem;
     border-left: 0.5rem solid #64a19d;
   }
 }
-.projects-section .project-text {
+.feat-section .project-text {
   padding: 3rem;
   font-size: 90%;
 }
 @media (min-width: 992px) {
-  .projects-section .project-text {
+  .feat-section .project-text {
     padding: 5rem;
   }
-  .projects-section .project-text hr {
+  .feat-section .project-text hr {
     border-color: #64a19d;
     border-width: 0.25rem;
     width: 30%;
@@ -10335,7 +10334,7 @@ body {
   border: 0;
 }
 
-.contact-section {
+.team-section {
   padding-top: 5rem;
 }
 .contact-section .card {
